--- a/package.json
+++ b/package.json
@@ -10,35 +10,35 @@
   },
   "dependencies": {
     "@prisma/client": "6.4.1",
-    "@swc/helpers": "^0.5.15",
-    "@tanstack/react-table": "^8.21.2",
+    "@swc/helpers": "^0.5.17",
+    "@tanstack/react-table": "^8.21.3",
     "@types/next-auth": "^3.15.0",
-    "csv": "^6.3.11",
+    "csv": "^6.4.1",
     "csv-parse": "^5.6.0",
-    "formidable": "^3.5.2",
-    "multer": "^1.4.5-lts.2",
+    "formidable": "^3.5.4",
+    "multer": "1.4.5-lts.2",
     "next": "15.2.8",
-    "next-auth": "^4.24.11",
-    "next-connect": "^1.0.0-next.4",
-    "prisma": "^6.8.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "next-auth": "^4.24.13",
+    "next-connect": "^1.0.0",
+    "prisma": "^6.19.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-google-recaptcha": "^3.1.0",
-    "react-select": "^5.10.1",
-    "styled-jsx": "^5.1.6",
+    "react-select": "^5.10.2",
+    "styled-jsx": "^5.1.7",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@types/formidable": "^3.4.5",
-    "@types/multer": "^1.4.12",
+    "@types/formidable": "^3.4.6",
+    "@types/multer": "^1.4.13",
     "@types/next": "^9.0.0",
-    "@types/node": "^20.17.28",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "daisyui": "^4.12.23",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@types/node": "^20.19.27",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "daisyui": "^4.12.24",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
+    "typescript": "^5.9.3"
   },
   "packageManager": "pnpm@9.14.4+sha512.c8180b3fbe4e4bca02c94234717896b5529740a6cbadf19fa78254270403ea2f27d4e1d46a08a0f56c89b63dc8ebfd3ee53326da720273794e6200fcf0d184ab"
 }
